--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Mi página personal
-description: mi primera página
+title: Color Pallete
+description: Taller 6 VRT
